stage0/tests/compile_fail/defer/defer_nested.dg
func main() -> i32 {
    if true {
        defer cleanup()
    }
    0
}
